--- a/love_letter_playground/interface/package.json
+++ b/love_letter_playground/interface/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "classnames": "^2.2.6",
-    "immer": "^9.0.1",
+    "immer": "^9.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
