--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,9 @@ Flask = "^2.0.2"
 stable-baselines3 = "^1.2.0"
 sb3-contrib = "^1.2.0"
 gym = "^0.21.0"
-gym-love-letter = {path = "../../GymEnvs/love-letter/dist/gym_love_letter-0.1.0-py3-none-any.whl"}
 poethepoet = "^0.10.0"
+marshmallow = "^3.10.0"
+gym-love-letter = {path = "../../GymEnvs/love-letter/dist/gym_love_letter-0.1.0-py3-none-any.whl"}
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
