Begin rewrite for websockets. Most likely broken

--- a/love_letter_playground/interface/babel.config.json
+++ b/love_letter_playground/interface/babel.config.json
@@ -1,7 +1,9 @@
 {
   "presets": [
       ["@babel/preset-env", {
-        "targets": "defaults"
+        "corejs": "3.20",
+        "targets": "defaults",
+        "useBuiltIns": "usage"
       }],
       "@babel/preset-react",
       "@babel/preset-typescript"
