--- a/love_letter_playground/interface/package.json
+++ b/love_letter_playground/interface/package.json
@@ -4,18 +4,19 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "classnames": "^2.2.6",
-    "immer": "^9.0.6",
+    "core-js": "^3.20.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
+    "react-redux": "^7.2.6",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
+    "@babel/core": "^7.16.5",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
@@ -23,7 +24,6 @@
     "@types/classnames": "^2.2.10",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.9",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "babel-loader": "^8.1.0",
