Split into multiple reducers, create backend models

--- a/love_letter_playground/interface/tsconfig.json
+++ b/love_letter_playground/interface/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": ["src/**/*"],
   "compilerOptions": {
+    "baseUrl": "src",
     "esModuleInterop": true,
     "jsx": "react",
     "strict": true
