--- a/love_letter_playground/interface/babel.config.json
+++ b/love_letter_playground/interface/babel.config.json
@@ -9,6 +9,10 @@
       "@babel/preset-typescript"
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties"
+    "@babel/plugin-proposal-class-properties",
+    ["module-resolver", {
+      "root": ["./src"],
+      "extensions": [ ".ts", ".tsx", ".js", ".jsx" ]
+    }]
   ]
 }
