--- a/love_letter_playground/interface/package.json
+++ b/love_letter_playground/interface/package.json
@@ -27,6 +27,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "css-loader": "^4.3.0",
     "css-modules-typescript-loader": "^4.0.1",
     "html-webpack-plugin": "^4.4.1",
