--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ gym-love-letter = {path = "../../GymEnvs/love-letter/dist/gym_love_letter-0.1.0-
 fastapi = "^0.70.0"
 uvicorn = {extras = ["standard"], version = "^0.15.0"}
 starlette-csrf = "^1.4.0"
+pydantic = "^1.9.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
