--- a/love_letter_playground/interface/tsconfig.json
+++ b/love_letter_playground/interface/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": "src",
     "esModuleInterop": true,
     "jsx": "react",
-    "strict": true
+    "strict": true,
+    "target": "es6"
   }
 }
