--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ fastapi = "^0.70.0"
 uvicorn = {extras = ["standard"], version = "^0.15.0"}
 starlette-csrf = "^1.4.0"
 pydantic = "^1.9.0"
+nanoid = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
